--- a/frontend-with-flask/templates/index.html
+++ b/frontend-with-flask/templates/index.html
@@ -1,65 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CVE List</title>
     <style>
-        h1 {
-  color:#000;
-  font-family:sans-serif;
-  font-size:2em;
-  margin-bottom:0;
-}
+      body {
+        font-family: sans-serif;
+        margin: 0;
+        padding: 0;
+      }
 
-table {  
-  font-family:sans-serif;
-  th, td {
-    padding:.25em .5em;
-    text-align:left;
-    &:nth-child(2) {
-      text-align:right;
-    }
-  }
-  td {
-    background-color:#eee;    
-  }
-  th {
-    background-color:#009;
-    color:#fff;
-  }
-}
+      h1 {
+        color: #000;
+        font-size: 2em;
+        margin-bottom: 1em;
+      }
 
-.tab {
-  border-collapse:separate;
-  border-spacing:.25em 1em;
-}
+      table {
+        width: 100%;
+        border-collapse: separate;
+        border-spacing: 0.25em 1em;
+      }
+
+      th,
+      td {
+        padding: 0.5em;
+        text-align: left;
+      }
+
+      th {
+        background-color: #009;
+        color: #fff;
+      }
+
+      td {
+        background-color: #eee;
+      }
+
+      a {
+        color: #009;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
     </style>
-    
-</head>
-<body>
+  </head>
+  <body>
     <h1>CVE List</h1>
 
-    <table class="tab">
+    <table>
       <thead>
         <tr>
-          <th class="header">CVE ID</th>
-          <th class="header">Identifier</th>
-          <th class="header">Published Date</th>
-          <th class="header">Last Modified Date</th>
-          <th class="header">Status</th>
+          <th>CVE ID</th>
+          <th>Identifier</th>
+          <th>Published Date</th>
+          <th>Last Modified Date</th>
+          <th>Status</th>
         </tr>
       </thead>
       <tbody>
         {% for item in cves %}
         <tr>
-          <td><a href="/{{item["ID"]}}">{{item["ID"]}}</a></td>
-          <td>{{item["Identifier"]}}</td>
-          <td>{{item["Last Modified"]}}</td>
-          <td>{{item["Published Date"]}}</td>
-          <td>{{item["Staus"]}}</td>
+          <td><a href="/{{ item['ID'] }}">{{ item['ID'] }}</a></td>
+          <td>{{ item['Identifier'] }}</td>
+          <td>{{ item['Published Date'] }}</td>
+          <td>{{ item['Last Modified'] }}</td>
+          <td>{{ item['Status'] }}</td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
-</body>
+  </body>
 </html>
